[package]
name = "tabbit-bridge"
version = "1.1.0"
edition = "2021"
authors = ["Tabbit Bridge"]
description = "Secure local HTTP bridge between Tabbit browser scripts and local CLI tools"
license = "MIT"
publish = false

[[bin]]
name = "tabbit-bridge"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
getrandom = "0.2"
subtle = "2"
wait-timeout = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
